// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should only render bet button on inital bet 1`] = `
Array [
  <button
    className="text-center ml-1 mr-1 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded"
  >
    Bet
  </button>,
  <button
    className="text-center ml-1 mr-1 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded"
  >
    Hit
  </button>,
  <button
    className="text-center ml-1 mr-1 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded"
  >
    Stand
  </button>,
  <h1
    className="text-white text-2xl px-8"
  >
    Bank: $
  </h1>,
  <h1
    className="text-white text-2xl px-8"
  >
    Pot: $
  </h1>,
  <h1
    className="text-white text-2xl px-8"
  >
    Player/House Score: 
    /
  </h1>,
]
`;

exports[`should render all buttons when no players are bust, if a game is active and not an initial bet 1`] = `
Array [
  <button
    className="text-center ml-1 mr-1 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded"
  >
    Bet
  </button>,
  <button
    className="text-center ml-1 mr-1 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded"
  >
    Hit
  </button>,
  <button
    className="text-center ml-1 mr-1 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded"
  >
    Stand
  </button>,
  <h1
    className="text-white text-2xl px-8"
  >
    Bank: $
  </h1>,
  <h1
    className="text-white text-2xl px-8"
  >
    Pot: $
  </h1>,
  <h1
    className="text-white text-2xl px-8"
  >
    Player/House Score: 
    /
  </h1>,
]
`;

exports[`should render bust text when house bust 1`] = `
Array [
  <h1
    className="text-white text-2xl px-8"
  >
    HOUSE WENT BUST!
  </h1>,
  <button
    className="text-center ml-1 mr-1 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded"
  >
    Deal
  </button>,
]
`;

exports[`should render bust text when player bust 1`] = `
Array [
  <h1
    className="text-white text-2xl px-8"
  >
    YOU WENT BUST!
  </h1>,
  <button
    className="text-center ml-1 mr-1 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded"
  >
    Deal
  </button>,
]
`;

exports[`should render deal button when not in play 1`] = `
<button
  className="text-center ml-1 mr-1 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded"
>
  Deal
</button>
`;
